<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".HealthLogDetailActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/detail_title_text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/health_log_details"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/back_button_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back_hl" />
    </LinearLayout>

    <TextView
        android:id="@+id/detail_log_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/log_type"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/detail_log_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/date"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/detail_log_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/description_hl"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/detail_log_treatment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/treatment_p"
        android:textSize="16sp" />

</LinearLayout>