<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".HealthLogActivity">

    <TextView
        android:id="@+id/health_log_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/health_log"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/back_button_health_log"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back_health_log"
        app:layout_constraintBaseline_toBaselineOf="@id/health_log_title"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/health_log_recycler_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/health_log_title"
        tools:listitem="@layout/item_health_log" />

    <TextView
        android:id="@+id/no_logs_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_health_logs_found"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/health_log_title" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/add_log_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:src="@android:drawable/ic_input_add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/add_new_health_log_" />



</androidx.constraintlayout.widget.ConstraintLayout>